@@ -8,6 +8,9 @@ Revision history for Dancer2-Template-Caribou
  [DOCUMENTATION]
 
  [ENHANCEMENTS]
+ - New D::T::C::DancerVariables role, to give access to dancer environment
+   from within template.
+    
 
  [NEW FEATURES]
 
